src/objects/FieloPLT__PublicSettings__c.object
<CustomObject>
    <fields>
        <fullName>InvoiceDuplicateClass__c</fullName>
        <label>Invoice duplicate Class</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxFileChunkSize__c</fullName>
        <label>Max File Chunk Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxFileSize__c</fullName>
        <label>Max File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductLookupField__c</fullName>
        <label>Product Lookup Field</label>
        <length>45</length>
        <type>Text</type>
    </fields>
</CustomObject>